# adaptive_concurrency_wasm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.test.mk  Makefile.wasm.mk  README.md  WORKSPACE
example/: adaptive_concurrency_configmap.yaml  adaptive_concurrency_filter.yaml  configmap.yaml  foo.yaml  static_concurrency_configmap.yaml  static_concurrency_filter.yaml
extensions/adaptive_concurrency/: Makefile  build_wasm.sh  plugin.cc
extensions/common/: config.cc  config.hpp  expavg_measurement.cc  expavg_measurement.hpp  gradient2_calculator.hpp  gradient_metrics.cc  gradient_metrics.hpp  gradient_plugin.cc  gradient_plugin.hpp  leader.cc  leader.hpp  plugin.cc  plugin.hpp  prometheus.cc  prometheus.hpp  rtt_queue.cc  rtt_queue.hpp  shared_data.cc  state.cc  state.hpp
extensions/static_concurrency/: Makefile  plugin.cc
hack/: Dockerfile  cmake.sh  create_configmap.sh  test.Dockerfile  test_container.sh
lib/: BUILD
lib/src/: expavg_measurement.cc  gradient.cc  gradient.hpp  gradient2_calculator.cc  gradient2_calculator.hpp  gradient2_controller.cc  (+2 more)
plugin/: BUILD
source/: .gitignore  CMakeLists.txt  Makefile  adaptive_concurrency_filter.cc  expavg_measurement.cc  expavg_measurement.hpp  gradient2_calculator.cc  gradient2_calculator.hpp  gradient2_controller.cc  gradient2_controller.hpp  percentile_samplewindow.cc  percentile_samplewindow.hpp  shared_data.hpp  static_concurrency_filter.cc
tests/: CMakeLists.txt  expavg_measurement.cc  gradient2_calculator.cc
tests/mock/: CMakeLists.txt  shared_data.cc
toolchain/: emcc.sh
(+15 files in other folders)
